Fix class card text cutoff

--- a/frontend/src/assets/scss/bt/_classcards.scss
+++ b/frontend/src/assets/scss/bt/_classcards.scss
@@ -30,7 +30,7 @@
 			border: 1px solid $border-color;
 			border-radius: 5px;
 			padding: 15px;
-			height: 130px;
+			height: 100%;
 
 			@include mobile {
 				height: 200px;
@@ -86,6 +86,10 @@
 			.class-card-title {
 				//font-size: 16px;
 				@include font-size-responsive-larger(16px);
+				
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				padding-top: 6px;
 
 				/* hide text if it more than N lines  */
 				overflow: hidden;
